Structural equality for API models
  - Order-independent API collections are now immutable sets
  - Ignore locations in comparisons
  - Allows comparing APIs across extractors
  - Ensures that extractors produce the same APIs