@@ -1,9 +1,9 @@
 package io.github.alien.roseau.api.model;
 
 import com.google.common.base.Preconditions;
+import com.google.common.collect.ImmutableSet;
 import io.github.alien.roseau.api.model.reference.TypeReference;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
@@ -13,17 +13,17 @@ import java.util.Set;
  */
 public final class EnumDecl extends ClassDecl {
 	// Just duplicating the simpleName of fields extending CtEnumValue for now, but we should probably refactor this
-	private final List<EnumValueDecl> values;
+	private final Set<EnumValueDecl> values;
 
 	public EnumDecl(String qualifiedName, AccessModifier visibility, Set<Modifier> modifiers,
-	                List<Annotation> annotations, SourceLocation location,
-	                List<TypeReference<InterfaceDecl>> implementedInterfaces, List<FieldDecl> fields,
-	                List<MethodDecl> methods, TypeReference<TypeDecl> enclosingType,
-	                List<ConstructorDecl> constructors, List<EnumValueDecl> values) {
-		super(qualifiedName, visibility, modifiers, annotations, location, implementedInterfaces, Collections.emptyList(),
-			fields, methods, enclosingType, TypeReference.ENUM, constructors, List.of());
+	                Set<Annotation> annotations, SourceLocation location,
+	                Set<TypeReference<InterfaceDecl>> implementedInterfaces, Set<FieldDecl> fields,
+	                Set<MethodDecl> methods, TypeReference<TypeDecl> enclosingType,
+	                Set<ConstructorDecl> constructors, Set<EnumValueDecl> values) {
+		super(qualifiedName, visibility, modifiers, annotations, location, implementedInterfaces, List.of(),
+			fields, methods, enclosingType, TypeReference.ENUM, constructors, Set.of());
 		Preconditions.checkNotNull(values);
-		this.values = List.copyOf(values);
+		this.values = ImmutableSet.copyOf(values);
 	}
 
 	@Override
@@ -31,7 +31,7 @@ public final class EnumDecl extends ClassDecl {
 		return true;
 	}
 
-	public List<EnumValueDecl> getValues() {
+	public Set<EnumValueDecl> getValues() {
 		return values;
 	}
 
